--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A game made for Ludum Dare 49",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --devtool inline-source-map"
   },
   "author": "Sigrath",
